--- a/env.example
+++ b/env.example
@@ -1,9 +1,17 @@
-PORT=3000
+# Server Configuration
+PORT=5000
 MONGO_URI=mongodb://localhost:27017/soramidev
-JWT_SECRET=test
+JWT_SECRET=your_jwt_secret_here
+
+# Registration Settings
 ALLOW_REGISTER=true
+
+# Debug Mode
 DEBUG=true
 
 # Passkey Configuration
 RP_ID=localhost
 RP_ORIGIN=http://localhost:3000
+
+# Security
+CORS_ORIGIN=http://localhost:3000
