update for test

--- a/env.example
+++ b/env.example
@@ -10,8 +10,18 @@ ALLOW_REGISTER=true
 DEBUG=true
 
 # Passkey Configuration
+# For development (frontend on different port)
 RP_ID=localhost
-RP_ORIGIN=http://localhost:3000
+RP_ORIGIN=http://localhost:5174
+RP_NAME=Sorami
+
+# For production, set these to your actual domain:
+# RP_ID=yourdomain.com
+# RP_ORIGIN=https://yourdomain.com
+# RP_NAME=Sorami
 
 # Security
-CORS_ORIGIN=http://localhost:3000
+CORS_ORIGIN=http://localhost:5174
+
+# For production, set CORS_ORIGIN to your frontend domain:
+# CORS_ORIGIN=https://yourdomain.com
