--- a/.env
+++ b/.env
@@ -7,3 +7,10 @@ DEBUG=true
 # Passkey Configuration
 RP_ID=localhost
 RP_ORIGIN=http://localhost:3000
+
+MINIO_ENDPOINT=localhost
+MINIO_PORT=9000
+MINIO_ACCESS_KEY=admin
+MINIO_SECRET_KEY=admin123
+MINIO_BUCKET=soramidev
+MINIO_USE_SSL=false
