--- a/env.example
+++ b/env.example
@@ -25,3 +25,45 @@ CORS_ORIGIN=http://localhost:5174
 
 # For production, set CORS_ORIGIN to your frontend domain:
 # CORS_ORIGIN=https://yourdomain.com
+
+# OSS (Object Storage Service) Configuration
+# Supported providers: minio, aws-s3, aliyun-oss, tencent-cos, qiniu
+OSS_PROVIDER=minio
+
+# MinIO Configuration (when OSS_PROVIDER=minio)
+OSS_ENDPOINT=localhost
+OSS_PORT=9000
+OSS_ACCESS_KEY=admin
+OSS_SECRET_KEY=admin123
+OSS_BUCKET=soramidev
+OSS_USE_SSL=false
+OSS_REGION=us-east-1
+
+# AWS S3 Configuration (when OSS_PROVIDER=aws-s3)
+# OSS_ENDPOINT=s3.amazonaws.com
+# OSS_ACCESS_KEY=your_aws_access_key
+# OSS_SECRET_KEY=your_aws_secret_key
+# OSS_BUCKET=your_s3_bucket_name
+# OSS_REGION=us-east-1
+# OSS_USE_SSL=true
+
+# Aliyun OSS Configuration (when OSS_PROVIDER=aliyun-oss)
+# OSS_ENDPOINT=oss-cn-hangzhou.aliyuncs.com
+# OSS_ACCESS_KEY=your_aliyun_access_key
+# OSS_SECRET_KEY=your_aliyun_secret_key
+# OSS_BUCKET=your_aliyun_bucket_name
+# OSS_REGION=oss-cn-hangzhou
+# OSS_USE_SSL=true
+
+# Tencent COS Configuration (when OSS_PROVIDER=tencent-cos)
+# OSS_ENDPOINT=cos.ap-beijing.myqcloud.com
+# OSS_ACCESS_KEY=your_tencent_access_key
+# OSS_SECRET_KEY=your_tencent_secret_key
+# OSS_BUCKET=your_cos_bucket_name
+# OSS_REGION=ap-beijing
+# OSS_USE_SSL=true
+
+# General OSS Settings
+OSS_PUBLIC_READ=true
+OSS_CDN_DOMAIN=
+# OSS_CDN_DOMAIN=https://cdn.yourdomain.com (optional CDN domain for faster access)
