--- a/.env
+++ b/.env
@@ -8,9 +8,19 @@ DEBUG=true
 RP_ID=localhost
 RP_ORIGIN=http://localhost:3000
 
-MINIO_ENDPOINT=localhost
-MINIO_PORT=9000
-MINIO_ACCESS_KEY=admin
-MINIO_SECRET_KEY=admin123
-MINIO_BUCKET=soramidev
-MINIO_USE_SSL=false
+# MINIO_ENDPOINT=localhost
+# MINIO_PORT=9000
+# MINIO_ACCESS_KEY=admin
+# MINIO_SECRET_KEY=admin123
+# MINIO_BUCKET=soramidev
+# MINIO_USE_SSL=false
+
+OSS_PROVIDER=minio
+OSS_ENDPOINT=localhost
+OSS_PORT=9000
+OSS_ACCESS_KEY=admin
+OSS_SECRET_KEY=admin123
+OSS_BUCKET=soramidev
+OSS_USE_SSL=false
+OSS_REGION=us-east-1
+OSS_PUBLIC_READ=true
