--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@simplewebauthn/browser": "^13.1.2",
     "@simplewebauthn/server": "^13.1.2",
     "bcrypt": "^5.1.1",
+    "chalk": "^5.6.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
