--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mongoose": "^8.13.2",
     "morgan": "^1.10.0",
     "multer": "^2.0.2",
+    "protobufjs": "^7.5.4",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "uuid": "^11.1.0",
